fix(account-category): Fixes account categories bleeding out of position (#20)

--- a/web/src/app/components/account/accounts-panel/accounts-panel.component.scss
+++ b/web/src/app/components/account/accounts-panel/accounts-panel.component.scss
@@ -27,3 +27,27 @@
     max-height: 350px;
     overflow-y: auto;
 }
+
+.panel-tabs {
+    overflow-x: auto;
+}
+
+
+.panel-tabs::-webkit-scrollbar-track
+{
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.panel-tabs::-webkit-scrollbar
+{
+	width: 2px;
+    background-color: #F5F5F5;
+    height: 5px;
+}
+
+.panel-tabs::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: rgba(39, 39, 39, 0.699);
+}
